tests/Checker/everything/errors/7a.vc
int main() {
    5 = 7;
    return 1;
}
